syntax = "proto3";

option go_package = "server/pb";

message Book {
  string title = 1;
  string author = 2;
  int32 page_count = 3;
  optional string language = 4;
}

message GetBookListRequest {}
message GetBookListResponse { repeated Book books = 1; }

message BookField { string key = 1; string value = 2; }

service Inventory {
  // Simple RPC
  rpc GetBookList(GetBookListRequest) returns (GetBookListResponse) {} 

  // Server-side streaming RPC
  rpc GetBookFieldsStream(Book) returns (stream BookField) {}

  // Client-side streaming rPC
  rpc CreateBookStream(stream BookField) returns (Book) {}

  rpc BiGetBooksToFields(stream Book) returns (stream BookField) {}
}